Renamed package to com.tailrocks.